Fix : overflow fixed mobile and bg changed for card loading

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
-    .App {
+    section {
         overflow-x: hidden;
     }
 
